# MandelbrotSet

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  common.h  compile_commands.json  count.cpp  count1.cpp  count2.cpp  draw.cpp  main.cpp  tests.cpp
common/: common.h
count_set/src/: color.cpp  count.cpp  count1.cpp  count2.cpp  count_1_type.cpp  count_2_type.cpp  count_3_type.cpp
draw_set/: draw.cpp
include/: common.h
src/: count_pixel.cpp  draw.cpp  main.c  main.cpp  tests.c  tests.cpp
tests_set/src/: tests.cpp
